# BuildSys

./: .gitignore  BuildSys_config.cmake  CMakeLists.txt  LICENSE  README.md  TODO  buildit.sh  buildsys.json  make_clean.sh
CMakeProjectTest/: BuildSys_config.cmake  CMakeLists.txt  make_clean.sh
CMakeProjectTest/cmake/: FetchAndPopulate.cmake  debuglog.cmake  enter.cmake  subdirlist.cmake
OLD/: buildit.sh
cmake/: debuglog.cmake  exit.cmake  installcmakepp.cmake
hello/: CMakeLists.txt  hello.cc
